[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyjs"
dynamic = ["version"]
description = "Python to JavaScript transpiler."
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Lex Berezhny", email = "lex@damoti.com" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
pyjs = "pyjs.cli:main"

[project.urls]
Homepage = "https://www.pyjs.org"
Documentation = "https://docs.pyjs.org"
"Release notes" = "https://docs.pyjs.org/en/stable/releases"
Funding = "https://www.pyjs.org/fundraising"
Source = "https://github.com/pyjs/pyjs"
Tracker = "https://github.com/pyjs/pyjs/issues"

[tool.hatch.version]
path = "pyjs/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pyjs"]

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = "pyjs"
